# SkillsLab

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  cli.py  copilot-instructions.md  docker-compose.yml  migrate_to_skillmd.py  pyproject.toml  pytest.ini  requirements.txt  server.py
.github/workflows/: test.yml
core/: __init__.py  analytics.py  config.py  evolver.py  exceptions.py  exporter.py  manager.py  model_manager.py  models.py  onnx_encoder.py  retriever.py  tfidf_encoder.py
dashboard/: __init__.py  server.py
tests/: conftest.py  test_config.py  test_evolver.py  test_manager.py  test_model_manager.py  test_models.py  test_retriever.py  test_skills_lab.py
ui/: skills-lab-ui.jsx
